[package]
name = "osu_miss_explainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
tokio = {version = "1.19", features = ["full"]}
tts_rust = "0.3.3"
tokio-tungstenite = "0.17"
url = "2.3"
futures-util = "0.3"